@@ -4,15 +4,18 @@ import com.github.ysbbbbbb.kaleidoscopecookery.KaleidoscopeCookery;
 import com.github.ysbbbbbb.kaleidoscopecookery.crafting.recipe.MillstoneRecipe;
 import com.github.ysbbbbbb.kaleidoscopecookery.init.ModItems;
 import com.github.ysbbbbbb.kaleidoscopecookery.init.ModRecipes;
+import com.google.common.collect.Lists;
 import dev.emi.emi.api.EmiRegistry;
 import dev.emi.emi.api.recipe.BasicEmiRecipe;
 import dev.emi.emi.api.recipe.EmiRecipeCategory;
 import dev.emi.emi.api.stack.EmiIngredient;
 import dev.emi.emi.api.stack.EmiStack;
 import dev.emi.emi.api.widget.WidgetHolder;
-import net.minecraft.core.RegistryAccess;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.multiplayer.ClientLevel;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.crafting.Ingredient;
+import net.minecraft.world.item.crafting.RecipeHolder;
 
 import java.util.List;
 
@@ -36,11 +39,26 @@ public class EmiMillstoneRecipe extends BasicEmiRecipe {
         registry.addCategory(CATEGORY);
         registry.addWorkstation(CATEGORY, EmiStack.of(ModItems.MILLSTONE));
 
-        registry.getRecipeManager().getAllRecipesFor(ModRecipes.MILLSTONE_RECIPE).forEach(holder -> {
-            MillstoneRecipe recipe = holder.value();
-            List<EmiIngredient> inputs = recipe.getIngredients().stream().map(EmiIngredient::of).toList();
-            List<EmiStack> outputs = List.of(EmiStack.of(recipe.getResultItem(RegistryAccess.EMPTY)));
-            registry.addRecipe(new EmiMillstoneRecipe(holder.id(), inputs, outputs));
+        List<RecipeHolder<MillstoneRecipe>> millstoneRecipes = Lists.newArrayList();
+        millstoneRecipes.addAll(registry.getRecipeManager().getAllRecipesFor(ModRecipes.MILLSTONE_RECIPE));
+
+        // 机械动力兼容
+        ClientLevel level = Minecraft.getInstance().level;
+
+        millstoneRecipes.forEach(r -> {
+            MillstoneRecipe value = r.value();
+
+            List<EmiIngredient> inputs = value.getIngredients().stream().map(EmiIngredient::of).toList();
+            List<EmiStack> outputs = Lists.newArrayList();
+
+            value.results().stream()
+                    .filter(output -> !output.isEmpty())
+                    .forEach(output -> {
+                        EmiStack emiStack = EmiStack.of(output.stack()).setChance(output.chance());
+                        outputs.add(emiStack);
+                    });
+
+            registry.addRecipe(new EmiMillstoneRecipe(r.id(), inputs, outputs));
         });
     }
 
@@ -48,13 +66,28 @@ public class EmiMillstoneRecipe extends BasicEmiRecipe {
     public void addWidgets(WidgetHolder widgets) {
         widgets.addTexture(BG, 1, 1, WIDTH, HEIGHT, 0, 0);
 
-        widgets.addSlot(inputs.get(0), 69, 39)
+        widgets.addSlot(inputs.getFirst(), 69, 39)
                 .drawBack(true);
-        widgets.addSlot(outputs.get(0), 146, 47)
-                .drawBack(false)
+
+        // 主输出
+        widgets.addSlot(outputs.getFirst(), 146, 47)
+                .drawBack(true)
+                .large(true)
                 .recipeContext(this);
+
+        // 副产物
+        if (outputs.size() > 1) {
+            for (int i = 1; i < outputs.size(); i++) {
+                int x = 174 + i * -20;
+                int y = 26;
+                widgets.addSlot(outputs.get(i), x, y)
+                        .drawBack(true)
+                        .recipeContext(this);
+            }
+        }
+
         if (!catalysts.isEmpty()) {
-            widgets.addSlot(catalysts.get(0), 115, 36)
+            widgets.addSlot(catalysts.getFirst(), 115, 36)
                     .drawBack(false)
                     .recipeContext(this);
         }
